added links and pages and fixed sum css

--- a/events.html
+++ b/events.html
@@ -21,7 +21,8 @@
                 <a href="contact.html">Contact</a>
             </div>
         </nav>
-        <h1>Home</h1>
+
+        <h1>Events</h1>
     </body>
 </html>
     
