--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,7 @@
                 <a href="contact.html">Contact</a>
             </div>
         </nav>
-        <h1>Home</h1>
+            <h1>Menu</h1>
     </body>
 </html>
     
